--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: black;
 }
 
 .main {
@@ -18,4 +19,5 @@ body {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color:white;
 }
