--- a/src/components/Pixel/styles.css
+++ b/src/components/Pixel/styles.css
@@ -1,21 +1,21 @@
 .pixel {
-  height: 40px;
-  width: 40px;
-  margin: 2px;
+  height: 10px;
+  width: 10px;
+  margin: 0px;
 }
 
-.pixel:hover {
+/* .pixel:hover {
   filter: brightness(.8);
 }
 
 .pixel:active {
   filter: brightness(5);
-}
+} */
 
 .on {
-  background-color: #cc1aae;
+  background-color: #ffffff;
 }
 
 .off {
-  background-color: #7f7dee;
+  background-color: #000000;
 }
